--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "db:migrate": "drizzle-kit migrate",
     "db:seed": "bun run src/db/seed.ts",
     "format": "bunx prettier --write .",
-    "format:check": "bunx prettier --check ."
+    "format:check": "bunx prettier --check .",
+    "lint": "bunx eslint ./src",
+    "lint:fix": "bunx eslint --fix ./src"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.7.0",
@@ -17,9 +19,12 @@
     "hono": "^4.7.11"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^4.14.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bun": "latest",
     "drizzle-kit": "^0.31.1",
+    "eslint": "^9.28.0",
+    "eslint-plugin-format": "^1.0.1",
     "prettier": "^3.5.3"
   }
 }
