--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
-    "hono": "^4.7.11"
+    "hono": "^4.7.11",
+    "hono-pino": "^0.8.0",
+    "pino": "^9.7.0",
+    "pino-pretty": "^13.0.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.14.1",
