--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@types/bun": "latest",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
-    "eslint-plugin-format": "^1.0.1",
-    "prettier": "^3.5.3"
+    "eslint-plugin-format": "^1.0.1"
   }
 }
