--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "drizzle-orm": "^0.44.2",
     "hono": "^4.7.11",
     "hono-pino": "^0.8.0",
-    "pino": "^9.7.0",
-    "pino-pretty": "^13.0.0"
+    "pino": "^9.7.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.14.1",
@@ -27,6 +26,7 @@
     "@types/bun": "latest",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
-    "eslint-plugin-format": "^1.0.1"
+    "eslint-plugin-format": "^1.0.1",
+    "pino-pretty": "^13.0.0"
   }
 }
