--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:seed": "bun run src/db/seed.ts",
+    "db:setup": "bun run db:generate && bun run db:migrate && bun run db:seed",
     "db:studio": "drizzle-kit studio",
     "lint": "bunx eslint ./src",
     "lint:fix": "bunx eslint --fix ./src"
