--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "drizzle-orm": "^0.44.2",
     "hono": "^4.7.11",
     "hono-pino": "^0.8.0",
+    "hono-rate-limiter": "^0.4.2",
     "http-status-codes": "^2.3.0",
     "pino": "^9.7.0"
   },
