Update welcome email template and email script
Refactored the welcome email template to improve styling, add a verification URL, and update content for clarity. Changed the email dev script to specify port 3001. Updated image paths and preview props for local development.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "db:studio": "drizzle-kit studio",
     "lint": "bunx eslint ./src",
     "lint:fix": "bunx eslint --fix ./src",
-    "email": "email dev --dir src/emails"
+    "email": "email dev --dir src/emails --port 3001"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.7.0",
