--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "http-status-codes": "^2.3.0",
     "pino": "^9.7.0",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "resend": "^4.0.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.14.1",
