Refactor email provider system and update env handling
Replaces the email provider factory with a new provider system supporting Ethereal for development and Resend for production/staging. Updates environment variable documentation and examples, removes committed environment files, and clarifies configuration in documentation. Adjusts .gitignore to exclude all .env.* files except .env.example, and updates validation and env loading logic to match the new provider structure.

Revise environment config docs for Bun native loading

Updated .env.example, CLAUDE.md, and README.md to clarify Bun's native environment variable loading order and best practices. Expanded documentation on environment file structure, removed redundant NODE_ENV usage, and provided clearer examples for environment-specific configuration. This improves onboarding and reduces confusion for developers setting up or deploying the project.

Add trailing newlines to .env files

Appended a trailing newline to all environment files for consistency and to adhere to POSIX standards.

Add environment configs and support for staging

Introduced .env files for development, production, staging, and test environments. Updated environment validation to support 'staging' as a NODE_ENV value. Adjusted error middleware to hide stack traces in both production and staging. Removed unnecessary dotenv imports since Bun handles .env loading automatically.

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,54 @@
-# Required
-NODE_ENV=development
+# Bun Environment File Configuration
+# ====================================
+# Bun automatically loads environment files based on NODE_ENV:
+# - .env (base configuration, always loaded first)
+# - .env.development (NODE_ENV=development)
+# - .env.production (NODE_ENV=production)
+# - .env.staging (NODE_ENV=staging)
+# - .env.test (NODE_ENV=test)
+# - .env.local (local overrides, not committed to git)
+# - .env.{environment}.local (environment-specific local overrides)
+
+# Base .env file should contain sensitive/shared values:
+# ========================================================
+
+# Required - Sensitive values (keep in .env, never commit)
 JWT_SECRET=your-secret-key-min-10-chars
 DB_URL=postgresql://user:password@host:port/database?sslmode=require
-EMAIL_SENDER_PROFILES={"system":{"email":"noreply@yourcompany.com","name":"Your Company"}}
+EMAIL_RESEND_API_KEY=your-resend-api-key
+
+# Shared configuration (can be overridden per environment)
+EMAIL_SENDER_PROFILES=...
+COMPANY_NAME=...
+COMPANY_SOCIAL_LINKS=...
+
+# Environment-specific files (.env.development, .env.production, .env.staging, .env.test):
+# =========================================================================================
+# Create these files locally based on your environment needs
+
+# .env.development example:
+# LOG_LEVEL=debug
+# BE_BASE_URL=http://localhost:3000
+# FE_BASE_URL=http://localhost:5173
+# EMAIL_ETHEREAL_HOST=smtp.ethereal.email
+# EMAIL_ETHEREAL_PORT=587
+# EMAIL_ETHEREAL_USERNAME=your-ethereal-username@ethereal.email
+# EMAIL_ETHEREAL_PASSWORD=your-ethereal-password
+
+# .env.production example:
+# LOG_LEVEL=info
+# BE_BASE_URL=https://api.yourcompany.com
+# FE_BASE_URL=https://app.yourcompany.com
+
+# .env.staging example:
+# LOG_LEVEL=info
+# BE_BASE_URL=https://api-staging.yourcompany.com
+# FE_BASE_URL=https://app-staging.yourcompany.com
+
+# .env.test example:
+# LOG_LEVEL=error
+# BE_BASE_URL=http://localhost:3000
+# FE_BASE_URL=http://localhost:5173
 
 # Optional with defaults
 PORT=3000
-LOG_LEVEL=info
-
-# Email configuration (optional)
-BE_BASE_URL=http://localhost:3000
-FE_BASE_URL=http://localhost:5173
-COMPANY_NAME=Your Company Name
-EMAIL_RESEND_API_KEY=your-resend-api-key
-COMPANY_SOCIAL_LINKS={"twitter": "https://twitter.com/yourcompany", "github": "https://github.com/yourcompany"}
