--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "hono-pino": "^0.8.0",
     "hono-rate-limiter": "^0.4.2",
     "http-status-codes": "^2.3.0",
+    "nodemailer": "^7.0.6",
     "pino": "^9.7.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -31,6 +32,7 @@
     "@antfu/eslint-config": "^4.14.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bun": "latest",
+    "@types/nodemailer": "^7.0.1",
     "drizzle-kit": "^0.31.1",
     "eslint": "^9.28.0",
     "eslint-plugin-format": "^1.0.1",
