--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "name": "portal-back-v2",
   "scripts": {
     "dev": "bun --watch src/app.ts",
+    "start": "NODE_ENV=production bun src/app.ts",
+    "staging": "NODE_ENV=staging bun src/app.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:seed": "bun run src/db/seed.ts",
