Enforce strict CORS config by environment and add tests
Refactors CORS middleware to apply strict origin validation for staging/production, allow common localhost origins in development, and permit all origins in test. Updates .env.example with detailed CORS configuration notes. Adds validation to require ALLOWED_ORIGINS in staging/production and comprehensive tests for all CORS scenarios.

--- a/.env.example
+++ b/.env.example
@@ -34,21 +34,54 @@ COMPANY_SOCIAL_LINKS=...
 # EMAIL_ETHEREAL_PORT=587
 # EMAIL_ETHEREAL_USERNAME=your-ethereal-username@ethereal.email
 # EMAIL_ETHEREAL_PASSWORD=your-ethereal-password
+# ALLOWED_ORIGINS is optional for development (common localhost ports are auto-allowed)
 
 # .env.production example:
 # LOG_LEVEL=info
 # BE_BASE_URL=https://api.yourcompany.com
 # FE_BASE_URL=https://app.yourcompany.com
+# ALLOWED_ORIGINS=https://app.yourcompany.com,https://www.yourcompany.com  # REQUIRED for production
+# COOKIE_DOMAIN=.yourcompany.com
 
 # .env.staging example:
 # LOG_LEVEL=info
 # BE_BASE_URL=https://api-staging.yourcompany.com
 # FE_BASE_URL=https://app-staging.yourcompany.com
+# ALLOWED_ORIGINS=https://app-staging.yourcompany.com  # REQUIRED for staging
+# COOKIE_DOMAIN=.yourcompany.com
 
 # .env.test example:
 # LOG_LEVEL=error
 # BE_BASE_URL=http://localhost:3000
 # FE_BASE_URL=http://localhost:5173
+# ALLOWED_ORIGINS is optional for test environment (all origins allowed)
 
 # Optional with defaults
 PORT=3000
+
+# =================================================================
+# CORS Configuration Notes:
+# =================================================================
+#
+# Development: Automatically allows common localhost ports
+#   - http://localhost:*
+#   - http://127.0.0.1:*
+#   - https://localhost:*
+#   - No ALLOWED_ORIGINS needed
+#
+# Test: All origins allowed for testing
+#   - No ALLOWED_ORIGINS needed
+#   - Credentials disabled
+#
+# Staging/Production: Strict CORS validation
+#   - ALLOWED_ORIGINS is REQUIRED (comma-separated list)
+#   - Only explicitly listed origins are allowed
+#   - Include all frontend domains that need API access
+#   - Example: https://app.example.com,https://admin.example.com
+#
+# Security Best Practices:
+#   - Never use wildcards (*) in production
+#   - Always use HTTPS origins in production
+#   - Keep the allowed origins list minimal
+#   - Review and audit CORS settings regularly
+# =================================================================
