Revise docs and env example; add API endpoint reference
Updated .env.example with concrete values for sender profiles, company name, and social links. Overhauled README.md for clarity, moving detailed API endpoint documentation to a new src/routes/README.md file. The main README now references the new API documentation and provides a more concise overview of setup, security, and architecture.

--- a/.env.example
+++ b/.env.example
@@ -18,9 +18,9 @@ DB_URL=postgresql://user:password@host:port/database?sslmode=require
 EMAIL_RESEND_API_KEY=your-resend-api-key
 
 # Shared configuration (can be overridden per environment)
-EMAIL_SENDER_PROFILES=...
-COMPANY_NAME=...
-COMPANY_SOCIAL_LINKS=...
+EMAIL_SENDER_PROFILES={"system":{"email":"noreply@yourcompany.com","name":"Your Company"}}
+COMPANY_NAME=Your Company Name
+COMPANY_SOCIAL_LINKS={"twitter": "https://twitter.com/yourcompany", "github": "https://github.com/yourcompany"}
 
 # Environment-specific files (.env.development, .env.production, .env.staging, .env.test):
 # =========================================================================================
