--- a/.env.example
+++ b/.env.example
@@ -15,12 +15,18 @@
 # Required - Sensitive values (keep in .env, never commit)
 JWT_SECRET=your-secret-key-min-10-chars
 DB_URL=postgresql://user:password@host:port/database?sslmode=require
-EMAIL_RESEND_API_KEY=your-resend-api-key
+EMAIL_RESEND_API_KEY=your-resend-api-key  # Required for staging/production
 
 # Shared configuration (can be overridden per environment)
+# EMAIL_SENDER_PROFILES - JSON object with email sender profiles (system, support, ceo, marketing)
+# Example: {"system":{"email":"noreply@company.com","name":"Company"},"support":{"email":"support@company.com","name":"Support"}}
 EMAIL_SENDER_PROFILES={"system":{"email":"noreply@yourcompany.com","name":"Your Company"}}
 COMPANY_NAME=Your Company Name
 COMPANY_SOCIAL_LINKS={"twitter": "https://twitter.com/yourcompany", "github": "https://github.com/yourcompany"}
+
+# Optional - Advanced configuration
+JWT_COOKIE_NAME=auth-token  # Default: auth-token
+EMAIL_PROVIDER=ethereal  # Optional override: 'ethereal' or 'resend' (auto-selects based on NODE_ENV)
 
 # Environment-specific files (.env.development, .env.production, .env.staging, .env.test):
 # =========================================================================================
@@ -30,25 +36,28 @@ COMPANY_SOCIAL_LINKS={"twitter": "https://twitter.com/yourcompany", "github": "h
 # LOG_LEVEL=debug
 # BE_BASE_URL=http://localhost:3000
 # FE_BASE_URL=http://localhost:5173
-# EMAIL_ETHEREAL_HOST=smtp.ethereal.email
-# EMAIL_ETHEREAL_PORT=587
-# EMAIL_ETHEREAL_USERNAME=your-ethereal-username@ethereal.email
-# EMAIL_ETHEREAL_PASSWORD=your-ethereal-password
+# EMAIL_ETHEREAL_HOST=smtp.ethereal.email  # Required if using Ethereal provider
+# EMAIL_ETHEREAL_PORT=587  # Required if using Ethereal provider
+# EMAIL_ETHEREAL_USERNAME=your-ethereal-username@ethereal.email  # Get from https://ethereal.email
+# EMAIL_ETHEREAL_PASSWORD=your-ethereal-password  # Get from https://ethereal.email
+# EMAIL_PROVIDER=ethereal  # Optional, defaults to 'ethereal' in development
 # ALLOWED_ORIGINS is optional for development (common localhost ports are auto-allowed)
 
 # .env.production example:
 # LOG_LEVEL=info
 # BE_BASE_URL=https://api.yourcompany.com
 # FE_BASE_URL=https://app.yourcompany.com
+# EMAIL_PROVIDER=resend  # Optional, defaults to 'resend' in production
 # ALLOWED_ORIGINS=https://app.yourcompany.com,https://www.yourcompany.com  # REQUIRED for production
-# COOKIE_DOMAIN=.yourcompany.com
+# COOKIE_DOMAIN=.yourcompany.com  # Optional, for cross-subdomain cookies
 
 # .env.staging example:
 # LOG_LEVEL=info
 # BE_BASE_URL=https://api-staging.yourcompany.com
 # FE_BASE_URL=https://app-staging.yourcompany.com
+# EMAIL_PROVIDER=resend  # Optional, defaults to 'resend' in staging
 # ALLOWED_ORIGINS=https://app-staging.yourcompany.com  # REQUIRED for staging
-# COOKIE_DOMAIN=.yourcompany.com
+# COOKIE_DOMAIN=.yourcompany.com  # Optional, for cross-subdomain cookies
 
 # .env.test example:
 # LOG_LEVEL=error
@@ -56,9 +65,30 @@ COMPANY_SOCIAL_LINKS={"twitter": "https://twitter.com/yourcompany", "github": "h
 # FE_BASE_URL=http://localhost:5173
 # ALLOWED_ORIGINS is optional for test environment (all origins allowed)
 
-# Optional with defaults
-PORT=3000
+# Optional server configuration
+PORT=3000  # Bun automatically uses this if set, default: 3000
 
+# =================================================================
+# Email Provider Configuration:
+# =================================================================
+#
+# Email Provider Auto-Selection (if EMAIL_PROVIDER not set):
+#   - Development (NODE_ENV=development): Uses Ethereal
+#   - Production (NODE_ENV=production): Uses Resend
+#   - Staging (NODE_ENV=staging): Uses Resend
+#   - Test (NODE_ENV=test): Uses Ethereal
+#
+# Ethereal (Development/Test):
+#   - Free email testing service
+#   - No real emails sent
+#   - View emails at https://ethereal.email
+#   - Create free account for credentials
+#
+# Resend (Production/Staging):
+#   - Real email delivery service
+#   - Requires EMAIL_RESEND_API_KEY
+#   - Get API key from https://resend.com
+#
 # =================================================================
 # CORS Configuration Notes:
 # =================================================================
