Add CAPTCHA secret key to .env.example
Introduced CAPTCHA_SECRET_KEY to the example environment file to support CAPTCHA configuration.

--- a/.env.example
+++ b/.env.example
@@ -68,6 +68,9 @@ EMAIL_PROVIDER=ethereal  # Optional override: 'ethereal' or 'resend' (auto-selec
 # Optional server configuration
 PORT=3000  # Bun automatically uses this if set, default: 3000
 
+# CAPTCHA Configuration
+CAPTCHA_SECRET_KEY=your_recaptcha_secret_key_here
+
 # =================================================================
 # Email Provider Configuration:
 # =================================================================
