--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "portal-back-v2",
+  "name": "smela-back",
   "scripts": {
     "dev": "bun --watch src/app.ts",
     "start": "NODE_ENV=production bun src/app.ts",
