--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@hono/zod-validator": "^0.7.0",
     "@neondatabase/serverless": "^1.0.1",
-    "@react-email/components": "0.3.1",
+    "@react-email/components": "^0.5.3",
     "bcrypt": "^6.0.0",
     "dotenv": "^16.5.0",
     "drizzle-orm": "^0.44.2",
@@ -28,8 +28,8 @@
     "http-status-codes": "^2.3.0",
     "nodemailer": "^7.0.6",
     "pino": "^9.7.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "resend": "^4.7.0"
   },
   "devDependencies": {
@@ -42,6 +42,6 @@
     "eslint": "^9.28.0",
     "eslint-plugin-format": "^1.0.1",
     "pino-pretty": "^13.0.0",
-    "react-email": "4.1.3"
+    "react-email": "^4.2.11"
   }
 }
