--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@react-email/components": "^0.5.3",
     "bcrypt": "^6.0.0",
-    "dotenv": "^16.5.0",
+    "dotenv": "^17.2.2",
     "drizzle-orm": "^0.44.2",
     "hono": "^4.7.11",
     "hono-pino": "^0.8.0",
@@ -35,7 +35,7 @@
   "devDependencies": {
     "@antfu/eslint-config": "^4.14.1",
     "@react-email/preview-server": "4.1.3",
-    "@types/bcrypt": "^5.0.2",
+    "@types/bcrypt": "6.0.0",
     "@types/bun": "latest",
     "@types/nodemailer": "^7.0.1",
     "drizzle-kit": "^0.31.1",
