Simplify and clean up .env.example configuration
Replaces extensive comments and examples with a concise set of required environment variables. Groups variables by core, database, network, email, company, and services, making the file easier to read and maintain.

--- a/.env.example
+++ b/.env.example
@@ -1,120 +1,30 @@
-# Bun Environment File Configuration
-# ====================================
-# Bun automatically loads environment files based on NODE_ENV:
-# - .env (base configuration, always loaded first)
-# - .env.development (NODE_ENV=development)
-# - .env.production (NODE_ENV=production)
-# - .env.staging (NODE_ENV=staging)
-# - .env.test (NODE_ENV=test)
-# - .env.local (local overrides, not committed to git)
-# - .env.{environment}.local (environment-specific local overrides)
+# Core
+LOG_LEVEL=info
 
-# Base .env file should contain sensitive/shared values:
-# ========================================================
+# Database
+DB_URL=postgresql://user:password@host:port/database
 
-# Required - Sensitive values (keep in .env, never commit)
+# Network
 JWT_SECRET=your-secret-key-min-10-chars
-DB_URL=postgresql://user:password@host:port/database?sslmode=require
-EMAIL_RESEND_API_KEY=your-resend-api-key  # Required for staging/production
+BE_BASE_URL=http://localhost:3000
+FE_BASE_URL=http://localhost:5173
+ALLOWED_ORIGINS=https://app.example.com  # required for staging/production
 
-# Shared configuration (can be overridden per environment)
-# EMAIL_SENDER_PROFILES - JSON object with email sender profiles (system, support, ceo, marketing)
-# Example: {"system":{"email":"noreply@company.com","name":"Company"},"support":{"email":"support@company.com","name":"Support"}}
-EMAIL_SENDER_PROFILES={"system":{"email":"noreply@yourcompany.com","name":"Your Company"}}
-COMPANY_NAME=Your Company Name
-COMPANY_SOCIAL_LINKS={"twitter": "https://twitter.com/yourcompany", "github": "https://github.com/yourcompany"}
+# Email
+EMAIL_SENDER_PROFILES=\{"system":{"email":"noreply@example.com","name":"Company"}\}
 
-# Optional - Advanced configuration
-JWT_COOKIE_NAME=auth-token  # Default: auth-token
-EMAIL_PROVIDER=ethereal  # Optional override: 'ethereal' or 'resend' (auto-selects based on NODE_ENV)
+EMAIL_PROVIDER=ethereal # or resend
 
-# Environment-specific files (.env.development, .env.production, .env.staging, .env.test):
-# =========================================================================================
-# Create these files locally based on your environment needs
+EMAIL_RESEND_API_KEY=your-resend-api-key
 
-# .env.development example:
-# LOG_LEVEL=debug
-# BE_BASE_URL=http://localhost:3000
-# FE_BASE_URL=http://localhost:5173
-# EMAIL_ETHEREAL_HOST=smtp.ethereal.email  # Required if using Ethereal provider
-# EMAIL_ETHEREAL_PORT=587  # Required if using Ethereal provider
-# EMAIL_ETHEREAL_USERNAME=your-ethereal-username@ethereal.email  # Get from https://ethereal.email
-# EMAIL_ETHEREAL_PASSWORD=your-ethereal-password  # Get from https://ethereal.email
-# EMAIL_PROVIDER=ethereal  # Optional, defaults to 'ethereal' in development
-# ALLOWED_ORIGINS is optional for development (common localhost ports are auto-allowed)
+EMAIL_ETHEREAL_HOST=smtp.ethereal.email
+EMAIL_ETHEREAL_PORT=587
+EMAIL_ETHEREAL_USERNAME=user@ethereal.email
+EMAIL_ETHEREAL_PASSWORD=password
 
-# .env.production example:
-# LOG_LEVEL=info
-# BE_BASE_URL=https://api.yourcompany.com
-# FE_BASE_URL=https://app.yourcompany.com
-# EMAIL_PROVIDER=resend  # Optional, defaults to 'resend' in production
-# ALLOWED_ORIGINS=https://app.yourcompany.com,https://www.yourcompany.com  # REQUIRED for production
-# COOKIE_DOMAIN=.yourcompany.com  # Optional, for cross-subdomain cookies
+# Company
+COMPANY_NAME=Company Name
+COMPANY_SOCIAL_LINKS={"twitter":"https://twitter.com/example"}
 
-# .env.staging example:
-# LOG_LEVEL=info
-# BE_BASE_URL=https://api-staging.yourcompany.com
-# FE_BASE_URL=https://app-staging.yourcompany.com
-# EMAIL_PROVIDER=resend  # Optional, defaults to 'resend' in staging
-# ALLOWED_ORIGINS=https://app-staging.yourcompany.com  # REQUIRED for staging
-# COOKIE_DOMAIN=.yourcompany.com  # Optional, for cross-subdomain cookies
-
-# .env.test example:
-# LOG_LEVEL=error
-# BE_BASE_URL=http://localhost:3000
-# FE_BASE_URL=http://localhost:5173
-# ALLOWED_ORIGINS is optional for test environment (all origins allowed)
-
-# Optional server configuration
-PORT=3000  # Bun automatically uses this if set, default: 3000
-
-# CAPTCHA Configuration
-CAPTCHA_SECRET_KEY=your_recaptcha_secret_key_here
-
-# =================================================================
-# Email Provider Configuration:
-# =================================================================
-#
-# Email Provider Auto-Selection (if EMAIL_PROVIDER not set):
-#   - Development (NODE_ENV=development): Uses Ethereal
-#   - Production (NODE_ENV=production): Uses Resend
-#   - Staging (NODE_ENV=staging): Uses Resend
-#   - Test (NODE_ENV=test): Uses Ethereal
-#
-# Ethereal (Development/Test):
-#   - Free email testing service
-#   - No real emails sent
-#   - View emails at https://ethereal.email
-#   - Create free account for credentials
-#
-# Resend (Production/Staging):
-#   - Real email delivery service
-#   - Requires EMAIL_RESEND_API_KEY
-#   - Get API key from https://resend.com
-#
-# =================================================================
-# CORS Configuration Notes:
-# =================================================================
-#
-# Development: Automatically allows common localhost ports
-#   - http://localhost:*
-#   - http://127.0.0.1:*
-#   - https://localhost:*
-#   - No ALLOWED_ORIGINS needed
-#
-# Test: All origins allowed for testing
-#   - No ALLOWED_ORIGINS needed
-#   - Credentials disabled
-#
-# Staging/Production: Strict CORS validation
-#   - ALLOWED_ORIGINS is REQUIRED (comma-separated list)
-#   - Only explicitly listed origins are allowed
-#   - Include all frontend domains that need API access
-#   - Example: https://app.example.com,https://admin.example.com
-#
-# Security Best Practices:
-#   - Never use wildcards (*) in production
-#   - Always use HTTPS origins in production
-#   - Keep the allowed origins list minimal
-#   - Review and audit CORS settings regularly
-# =================================================================
+# Services
+CAPTCHA_SECRET_KEY=your-recaptcha-secret-key
