Add dotenv and environment-based email config
Introduces the dotenv package for environment variable management. Refactors email config to source company name and social links from environment variables via a new env.ts module, allowing for dynamic configuration.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@react-email/components": "^0.5.3",
     "bcrypt": "^6.0.0",
+    "dotenv": "^16.4.7",
     "drizzle-orm": "^0.44.2",
     "hono": "^4.7.11",
     "hono-pino": "^0.10.2",
