Refactor auth cookie handling to dedicated module
Moved authentication cookie logic to a new 'cookie-auth.ts' module, introducing the AuthCookie class for improved encapsulation and configurability. Updated environment example to include COOKIE_DOMAIN. Refactored usage throughout the codebase to use the new module and class.

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ JWT_SECRET=your-secret-key-min-10-chars
 BE_BASE_URL=http://localhost:3000
 FE_BASE_URL=http://localhost:5173
 ALLOWED_ORIGINS=https://app.example.com  # required for staging/production
+COOKIE_DOMAIN=localhost  # required for staging/production
 
 # Email
 EMAIL_SENDER_PROFILES=\{"system":{"email":"noreply@example.com","name":"Company"}\}
