--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "test": "NODE_ENV=test bun test",
     "lint": "bunx eslint ./src",
     "lint:fix": "bunx eslint --fix ./src",
-    "email": "email dev --dir src/emails --port 3001"
+    "email": "email dev --dir src/emails --port 3001",
+    "docker:build": "docker build -t smela-back .",
+    "docker:test": "docker run --rm -it smela-back"
   },
   "dependencies": {
     "@hono/zod-validator": "^0.7.0",
