Update test workflow to debug signup test
Enabled debugging for the signup test file and commented out the full test suite run in the GitHub Actions workflow. This helps focus on issues specific to the signup route during CI runs.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,11 +25,11 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      #- name: Debug single test file
-      #  run: bun test --verbose src/routes/auth/login/__tests__/login.test.ts
+      - name: Debug single test file
+        run: bun test --verbose src/routes/auth/signup/__tests__/signup.test.ts
 
       #- name: Run linting
       #  run: bun run lint
 
-      - name: Run tests
-        run: bun run test
+      #- name: Run tests
+      #  run: bun run test
