--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,7 +25,10 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Debug single test file
+      - name: Debug login
+        run: bun test --verbose src/routes/auth/login/__tests__/login.test.ts
+
+      - name: Debug signup
         run: bun test --verbose src/routes/auth/signup/__tests__/signup.test.ts
 
       #- name: Run linting
