--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,14 +25,14 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      - name: Debug login
-        run: bun test --verbose src/routes/auth/login/__tests__/login.test.ts
+      #- name: Debug login
+      #  run: bun test --verbose src/routes/auth/login/__tests__/login.test.ts
 
-      - name: Debug signup
-        run: bun test --verbose src/routes/auth/signup/__tests__/signup.test.ts
+      #- name: Debug signup
+      #  run: bun test --verbose src/routes/auth/signup/__tests__/signup.test.ts
 
       #- name: Run linting
       #  run: bun run lint
 
-      #- name: Run tests
-      #  run: bun run test
+      - name: Run tests
+        run: bun run test
