--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,12 +11,20 @@ jobs:
     environment: test
     env:
       LOG_LEVEL: ${{ vars.LOG_LEVEL }}
-      CAPTCHA_SECRET_KEY: ${{ secrets.CAPTCHA_SECRET_KEY }}
-      JWT_ACCESS_SECRET: ${{ secrets.JWT_ACCESS_SECRET }}
       DB_URL: ${{ secrets.DB_URL }}
-      COMPANY_SOCIAL_LINKS: ${{ secrets.COMPANY_SOCIAL_LINKS }}
-      EMAIL_SENDER_PROFILES: ${{ secrets.EMAIL_SENDER_PROFILES }}
-      EMAIL_RESEND_API_KEY: ${{ secrets.EMAIL_RESEND_API_KEY }}
+      JWT_ACCESS_SECRET: ${{ secrets.JWT_ACCESS_SECRET }}
+      COOKIE_NAME: ${{ vars.COOKIE_NAME }}
+      COOKIE_DOMAIN: ${{ vars.COOKIE_DOMAIN }}
+      BE_BASE_URL: ${{ vars.BE_BASE_URL }}
+      FE_BASE_URL: ${{ vars.FE_BASE_URL }}
+      EMAIL_SENDER_PROFILES: ${{ vars.EMAIL_SENDER_PROFILES }}
+      EMAIL_ETHEREAL_HOST: ${{ vars.EMAIL_ETHEREAL_HOST }}
+      EMAIL_ETHEREAL_PORT: ${{ vars.EMAIL_ETHEREAL_PORT }}
+      EMAIL_ETHEREAL_USERNAME: ${{ vars.EMAIL_ETHEREAL_USERNAME }}
+      EMAIL_ETHEREAL_PASSWORD: ${{ secrets.EMAIL_ETHEREAL_PASSWORD }}
+      COMPANY_NAME: ${{ vars.COMPANY_NAME }}
+      COMPANY_SOCIAL_LINKS: ${{ vars.COMPANY_SOCIAL_LINKS }}
+      CAPTCHA_SECRET_KEY: ${{ secrets.CAPTCHA_SECRET_KEY }}
 
     steps:
       - name: Checkout code
@@ -24,12 +32,6 @@ jobs:
 
       - name: Install dependencies
         run: bun install
-
-      #- name: Debug login
-      #  run: bun test --verbose src/routes/auth/login/__tests__/login.test.ts
-
-      #- name: Debug signup
-      #  run: bun test --verbose src/routes/auth/signup/__tests__/signup.test.ts
 
       #- name: Run linting
       #  run: bun run lint
