--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -36,5 +36,8 @@ jobs:
       #- name: Run linting
       #  run: bun run lint
 
-      - name: Run tests
-        run: bun test
+      - name: Run tests 1
+        run: bun test src/routes/auth/login/__tests__/
+
+      - name: Run tests 2
+        run: bun test src/routes/auth/signup/__tests__/
