--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,11 +33,8 @@ jobs:
       - name: Install dependencies
         run: bun install
 
-      #- name: Run linting
-      #  run: bun run lint
+      - name: Run linting
+        run: bun run lint
 
-      - name: Signup
-        run: bun test src/routes/auth/signup/__tests__/
-
-      - name: Login
-        run: bun test src/routes/auth/login/__tests__/
+      - name: Run tests
+        run: bun test
