Refactor email provider selection logic
Removed EMAIL_PROVIDER env variable and related validation. Email provider is now determined by the presence of EMAIL_RESEND_API_KEY, defaulting to 'resend' if set, otherwise 'ethereal'. Updated .env.example and refactored provider factory logic accordingly.

--- a/.env.example
+++ b/.env.example
@@ -15,16 +15,15 @@ BE_BASE_URL=http://localhost:3000
 FE_BASE_URL=http://localhost:5173
 
 # Email
-EMAIL_SENDER_PROFILES=\{"system":{"email":"noreply@example.com","name":"Company"}\}
-
-EMAIL_PROVIDER=ethereal # or resend
-
+# If EMAIL_RESEND_API_KEY is provided, uses Resend. Otherwise uses Ethereal for dev
 EMAIL_RESEND_API_KEY=your-resend-api-key
 
 EMAIL_ETHEREAL_HOST=smtp.ethereal.email
 EMAIL_ETHEREAL_PORT=587
 EMAIL_ETHEREAL_USERNAME=user@ethereal.email
 EMAIL_ETHEREAL_PASSWORD=password
+
+EMAIL_SENDER_PROFILES=\{"system":{"email":"noreply@example.com","name":"Company"}\}
 
 # Company
 COMPANY_NAME=Company Name
