Update workflow conditions and Bun container version
Removes the '[skip-review]' check and comments out 'use_sticky_comment' in the Claude code review workflow. Updates the test workflow to use the latest Bun container instead of a specific version.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    container: oven/bun:1.2.16
+    container: oven/bun:latest
     environment: test
     env:
       LOG_LEVEL: ${{ vars.LOG_LEVEL }}
