Switch to Neon serverless pool with config validation
Migrates database connection to Neon serverless Pool with WebSocket driver for transaction support. Adds DB_MAX_CONNECTIONS environment variable, updates validation and env config, and documents connection pooling and transaction features in CLAUDE.md.

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ LOG_LEVEL=info
 
 # Database
 DB_URL=postgresql://user:password@host:port/database
+DB_MAX_CONNECTIONS=10
 
 # Network
 JWT_ACCESS_SECRET=your-secret-key-min-10-chars
