--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -69,5 +69,7 @@
     "titleBar.inactiveForeground": "#e7e7e799"
   },
 
-  "peacock.color": "#215732"
+  "peacock.color": "#215732",
+
+  "editor.rulers": [100]
 }
