--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,15 @@ name: Tests
 on:
   pull_request:
     branches: [main, dev]
+    paths-ignore:
+      - '**.md'
+      - '**.txt'
+      - '**.json'
+      - '**.yml'
+      - '!.github/workflows/test.yml'
+      - '**.yaml'
+      - 'LICENSE'
+      - '.gitignore'
 
 jobs:
   test:
