Update workflow triggers and README badges
Added push event configuration to test workflow for main branch and refined ignored paths. Updated README to include build status badges for dev and main branches, and clarified environment and database setup instructions.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,17 @@ on:
       - '**.yaml'
       - 'LICENSE'
       - '.gitignore'
+  push:
+    branches: [main]
+    paths-ignore:
+      - '**.md'
+      - '**.txt'
+      - '**.json'
+      - '**.yml'
+      - '!.github/workflows/test.yml'
+      - '**.yaml'
+      - 'LICENSE'
+      - '.gitignore'
 
 jobs:
   test:
