--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "staging": "NODE_ENV=staging bun src/app.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:seed": "bun run src/db/seed.ts",
+    "db:seed": "bun run src/data/seed.ts",
     "db:setup": "bun run db:generate && bun run db:migrate && bun run db:seed",
     "db:studio": "drizzle-kit studio",
     "test": "NODE_ENV=test bun test",
