Add Codecov integration and coverage reporting
Configured test coverage reporting in bunfig.toml and updated the GitHub Actions workflow to run tests with coverage and upload results to Codecov. Added codecov.yml for coverage thresholds and reporting settings.

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -56,8 +56,15 @@ jobs:
       - name: Run linting
         run: bun run lint
 
-      - name: Run tests
-        run: bun test
+      - name: Run tests with coverage
+        run: bun test --coverage
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage/lcov.info
+          fail_ci_if_error: true
 
   # build:
   #   runs-on: ubuntu-latest
