Add Codecov dependencies installation to workflow
Installs git, curl, and gpg before running coverage tests to ensure Codecov integration works correctly in the Ubuntu GitHub Actions workflow.

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -47,6 +47,9 @@ jobs:
       CAPTCHA_SECRET_KEY: ${{ secrets.CAPTCHA_SECRET_KEY }}
 
     steps:
+      - name: Install dependencies for Codecov
+        run: apt-get update && apt-get install -y git curl gpg
+
       - name: Checkout code
         uses: actions/checkout@v4
 
