Update CI and Codecov configuration
Added CI/CD notes to .env.example, enforced Codecov upload failure in GitHub Actions, disabled patch coverage threshold, and expanded ignore patterns in codecov.yml for improved coverage reporting and workflow reliability.

--- a/codecov.yml
+++ b/codecov.yml
@@ -4,14 +4,20 @@ coverage:
       default:
         target: 50%
         informational: true
-    patch:
-      default:
-        target: 50%
-        informational: true
+    patch: off
 
   range: 50..75
   round: down
   precision: 0
+
+ignore:
+  - '**/*.test.ts'
+  - '**/__tests__/**'
+  - 'src/data/migrations/**'
+  - 'node_modules/**'
+  - 'coverage/**'
+  - 'dist/**'
+  - 'build/**'
 
 comment:
   layout: 'reach,diff,flags,tree,footer'
