--- a/.env.example
+++ b/.env.example
@@ -32,3 +32,6 @@ COMPANY_SOCIAL_LINKS={"twitter":"https://twitter.com/example"}
 
 # Services
 CAPTCHA_SECRET_KEY=your-recaptcha-secret-key
+
+# CI/CD (only set in GitHub secrets, not in .env files)
+# CODECOV_TOKEN=your-codecov-upload-token
