--- a/codecov.yml
+++ b/codecov.yml
@@ -1,7 +1,7 @@
 coverage:
   status:
     project:
-      default:
+      Coverage / project:
         target: 50%
         informational: true
     patch: off
