--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -1,4 +1,4 @@
-name: Ubuntu
+name: CI
 
 on:
   pull_request:
@@ -25,7 +25,7 @@ on:
       - '.gitignore'
 
 jobs:
-  tests:
+  ubuntu:
     runs-on: ubuntu-latest
     container: oven/bun:latest
     environment: test
