Update Codecov project status configuration
Replaces 'Coverage / project' with 'default' under the project status section in codecov.yml for improved configuration clarity.

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,7 +1,7 @@
 coverage:
   status:
     project:
-      Coverage / project:
+      default:
         target: 50%
         informational: true
     patch: off
