--- a/.codacy.yml
+++ b/.codacy.yml
@@ -4,6 +4,7 @@ engines:
     enabled: true
 exclude_paths:
   - 'src/**/*.test.ts'
+  - 'src/**/*.mock.ts'
   - '**/__tests__/**'
   - 'src/**/*migration*.ts'
   - 'src/**/migrations/**'
