--- a/.codacy.yml
+++ b/.codacy.yml
@@ -2,6 +2,7 @@
 engines:
   eslint:
     enabled: true
+    configuration_file: eslint.config.mjs
 exclude_paths:
   - 'src/**/*.test.ts'
   - 'src/**/*.mock.ts'
