Disable TypeScript unsafe rules in ESLint config
Moved disabling of '@typescript-eslint/no-unsafe-*' rules from Codacy config to ESLint config. Updated Codacy to use 'eslint-9' engine and removed rule exclusions, centralizing rule management in ESLint.

--- a/.codacy.yml
+++ b/.codacy.yml
@@ -1,14 +1,7 @@
 ---
 engines:
-  eslint:
+  eslint-9:
     enabled: true
-    configuration_file: eslint.config.mjs
-    exclude_patterns:
-      - '@typescript-eslint/no-unsafe-assignment'
-      - '@typescript-eslint/no-unsafe-call'
-      - '@typescript-eslint/no-unsafe-member-access'
-      - '@typescript-eslint/no-unsafe-return'
-      - '@typescript-eslint/no-unsafe-argument'
 exclude_paths:
   - 'src/**/*.test.ts'
   - 'src/**/*.mock.ts'
