Update CI workflow and add coverage/check scripts
Modified GitHub Actions workflow to use 'bun lint' and 'bun coverage' commands. Added 'coverage' and 'check' scripts to package.json for improved test coverage and linting integration.

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -57,10 +57,10 @@ jobs:
         run: bun install
 
       - name: Run linting
-        run: bun run lint
+        run: bun lint
 
       - name: Run tests with coverage
-        run: bun test --coverage
+        run: bun coverage
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v5
