--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "test:with-db": "NODE_ENV=test bun test ./src --test-name-pattern '@with-db'",
     "test:all": "bun run test && bun run test:with-db",
     "coverage": "NODE_ENV=test bun test ./src --coverage",
-    "lint": "bunx eslint ./src",
-    "lint:fix": "bunx eslint --fix ./src",
+    "lint": "bunx eslint --cache ./src",
+    "lint:fix": "bunx eslint --cache --fix ./src",
     "check": "bun run lint && bun run test",
     "email": "email dev --dir src/emails --port 3001",
     "docker:build": "docker build -t smela-back .",
