--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ POSTGRES_MAX_CONNECTIONS=2
 # Network
 JWT_SECRET=your-secret-key-min-10-chars
 # JWT_SECRET_PREVIOUS=your-previous-secret-key # optional, for secret rotation
-JWT_EXPIRATION=900
+JWT_EXPIRATION=900 # 15 minutes
 COOKIE_REFRESH_TOKEN_NAME=refresh-token
 COOKIE_REFRESH_TOKEN_EXPIRATION=86400 # 24 hours
 COOKIE_REFRESH_TOKEN_DOMAIN=localhost # required for staging/production
