--- a/package.json
+++ b/package.json
@@ -31,33 +31,33 @@
     "docker:test": "docker run --rm -it smela-back"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.7.4",
+    "@hono/zod-validator": "0.7.5",
     "@react-email/components": "^0.5.6",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.44.6",
-    "hono": "^4.9.12",
+    "drizzle-orm": "^0.44.7",
+    "hono": "^4.10.7",
     "hono-pino": "^0.10.3",
     "hono-rate-limiter": "^0.4.2",
     "http-status-codes": "^2.3.0",
     "pg": "^8.16.3",
-    "pino": "^10.0.0",
+    "pino": "^10.1.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "resend": "^6.1.3"
+    "resend": "^6.5.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^6.0.0",
+    "@antfu/eslint-config": "^6.2.0",
     "@react-email/preview-server": "4.3.0",
-    "@types/bcrypt": "6.0.0",
+    "@types/bcrypt": "^6.0.0",
     "@types/bun": "latest",
-    "@types/nodemailer": "^7.0.2",
-    "@types/pg": "^8.15.5",
-    "drizzle-kit": "^0.31.5",
-    "eslint": "^9.37.0",
+    "@types/nodemailer": "^7.0.4",
+    "@types/pg": "^8.15.6",
+    "drizzle-kit": "^0.31.7",
+    "eslint": "^9.39.1",
     "eslint-plugin-format": "^1.0.2",
     "husky": "^9.1.7",
-    "nodemailer": "^7.0.9",
+    "nodemailer": "^7.0.11",
     "pino-pretty": "^13.1.2",
     "react-email": "^4.3.0"
   }
