--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "coverage": "NODE_ENV=test bun test ./src --coverage",
     "lint": "bunx eslint --cache ./src",
     "lint:fix": "bunx eslint --cache --fix ./src",
-    "typecheck": "bunx tsc --noEmit",
-    "check": "bun run lint && bun run typecheck && bun run test",
+    "tsc": "bunx tsc --noEmit",
+    "check": "bun run lint && bun run tsc && bun run test",
     "emails": "email dev --dir src/emails --port 3001",
     "docker:build": "docker build -t smela-back .",
     "docker:test": "docker run --rm -it smela-back"
