--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "smela-back",
+  "version": "2025.12",
   "scripts": {
     "prepare": "husky",
     "clean": "bun pm cache rm && rm -rf node_modules bun.lock",
@@ -34,6 +35,7 @@
   "dependencies": {
     "@hono/zod-validator": "0.7.5",
     "@react-email/components": "^0.5.6",
+    "@sentry/bun": "^10.30.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
