Add error tracker service with Sentry integration (#112)
* Add error tracker service with Sentry integration

* Clean up error tracker tests and exports

* Rename instance.ts to singleton.ts for clarity

* Integrate error tracker user context in auth flow

* Remove beforeSend hook from Sentry init

--- a/.env.example
+++ b/.env.example
@@ -38,6 +38,7 @@ COMPANY_SOCIAL_LINKS={ "twitter": "https://twitter.com/example" }
 
 # Services
 CAPTCHA_SECRET_KEY=your-recaptcha-secret-key
+SENTRY_DSN=https://your-sentry-dsn
 
 # CI/CD (only set in GitHub secrets, not in .env files)
 # CODECOV_TOKEN=your-codecov-upload-token
