Remove custom migration infrastructure

--- a/package.json
+++ b/package.json
@@ -10,9 +10,8 @@
     "staging": "NODE_ENV=staging bun src/app.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
-    "db:migrate:custom": "bun src/data/migrations/custom/run.ts",
     "db:seed": "bun src/data/seed.ts",
-    "db:init": "bun run db:generate && bun run db:migrate && bun run db:migrate:custom && bun run db:seed",
+    "db:init": "bun run db:generate && bun run db:migrate && bun run db:seed",
     "db:ui": "drizzle-kit studio",
     "db:up:dev": "docker compose -f docker-compose-dev.yml --env-file .env.development up -d --wait",
     "db:down": "docker compose -f docker-compose-dev.yml down",
