--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "db:up:test": "docker compose -f docker-compose-test.yml --env-file .env.test up -d --wait",
     "db:down:test": "docker compose -f docker-compose-test.yml --env-file .env.test down -v",
     "db:reset:test": "bun run db:down:test && bun run db:up:test && NODE_ENV=test bun run db:init",
-    "test": "NODE_ENV=test bun test ./src --test-name-pattern '^(?!.*@with-db)'",
-    "test:with-db": "NODE_ENV=test bun test ./src --test-name-pattern '@with-db'",
+    "test": "NODE_ENV=test bun test src --test-name-pattern '^(?!.*@with-db)'",
+    "test:with-db": "NODE_ENV=test bun test src --test-name-pattern '@with-db'",
     "test:all": "bun run test && bun run test:with-db",
-    "coverage": "NODE_ENV=test bun test ./src --coverage",
-    "lint": "bunx eslint --cache ./src",
-    "lint:fix": "bunx eslint --cache --fix ./src",
+    "coverage": "NODE_ENV=test bun test src --coverage",
+    "lint": "bunx eslint --cache src",
+    "lint:fix": "bunx eslint --cache --fix src",
     "tsc": "bunx tsc --noEmit",
     "check": "bun run lint && bun run tsc && bun run test",
     "emails": "email dev --dir src/emails --port 3001",
