Add text search to admin users endpoint (#115)
* Add text search to admin users endpoint

* Add pg_trgm index for user search optimization

* Update package.json

* Update postman.json

--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "staging": "NODE_ENV=staging bun src/app.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
+    "db:migrate:custom": "bun src/data/migrations/custom/run.ts",
     "db:seed": "bun src/data/seed.ts",
-    "db:init": "bun run db:generate && bun run db:migrate && bun run db:seed",
+    "db:init": "bun run db:generate && bun run db:migrate && bun run db:migrate:custom && bun run db:seed",
     "db:ui": "drizzle-kit studio",
     "db:up:dev": "docker compose -f docker-compose-dev.yml --env-file .env.development up -d --wait",
     "db:down": "docker compose -f docker-compose-dev.yml down",
@@ -20,12 +21,12 @@
     "db:up:test": "docker compose -f docker-compose-test.yml --env-file .env.test up -d --wait",
     "db:down:test": "docker compose -f docker-compose-test.yml --env-file .env.test down -v",
     "db:reset:test": "bun run db:down:test && bun run db:up:test && NODE_ENV=test bun run db:init",
-    "test": "NODE_ENV=test bun test ./src --test-name-pattern '^(?!.*@with-db)'",
-    "test:with-db": "NODE_ENV=test bun test ./src --test-name-pattern '@with-db'",
+    "test": "NODE_ENV=test bun test src --test-name-pattern '^(?!.*@with-db)'",
+    "test:with-db": "NODE_ENV=test bun test src --test-name-pattern '@with-db'",
     "test:all": "bun run test && bun run test:with-db",
-    "coverage": "NODE_ENV=test bun test ./src --coverage",
-    "lint": "bunx eslint --cache ./src",
-    "lint:fix": "bunx eslint --cache --fix ./src",
+    "coverage": "NODE_ENV=test bun test src --coverage",
+    "lint": "bunx eslint --cache src",
+    "lint:fix": "bunx eslint --cache --fix src",
     "tsc": "bunx tsc --noEmit",
     "check": "bun run lint && bun run tsc && bun run test",
     "emails": "email dev --dir src/emails --port 3001",
