--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:migrate:custom": "bun src/data/migrations/custom/run.ts",
-    "db:seed": "bun src/data/seed.ts",
+    "db:seed": "bun src/data/scripts/seed.ts",
     "db:init": "bun run db:generate && bun run db:migrate && bun run db:migrate:custom && bun run db:seed",
     "db:ui": "drizzle-kit studio",
     "db:up:dev": "docker compose -f docker-compose-dev.yml --env-file .env.development up -d --wait",
@@ -52,6 +52,7 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^6.2.0",
+    "@faker-js/faker": "^10.1.0",
     "@react-email/preview-server": "4.3.2",
     "@types/bcrypt": "^6.0.0",
     "@types/bun": "latest",
